# quick-short-ai-projects

assignment-grader/: .env.example  .gitignore  README.md  app.py  google-test.py  pyproject.toml  requirements.txt  server.py
chatbot-in-10-min/: .gitignore  README.md  app.py  requirements.txt  test.ipynb
client-server-mcp/mcp-client-fasstapi/: .gitignore  mcp_server.py  pyproject.toml
client-server-mcp/mcp-client-fasstapi/api/: main.py
doctor-appoinment-multiagent/: README.md  agent.py  main.py  requirements.txt  setup.py
doctor-appoinment-multiagent/data_models/: models.py
doctor-appoinment-multiagent/doctor_appointment_agentic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doctor-appoinment-multiagent/notebook/: model_test.ipynb
doctor-appoinment-multiagent/utils/: llms.py
local-ai-agents/: requirements.txt  vector.py
local-llm-rag/: .gitignore  README.md  main.py  x.csv
test-mcp/: .env  client.py  pyproject.toml  requirements.txt  server.py
test-ocr/: .env.example  app.py  main.py  pyproject.toml  requirements.txt
twitter-automation/: README.md
twitter-automation/client/: .env-example  index.js  package-lock.json  package.json
twitter-automation/server/: .env-example  index.js  package-lock.json  package.json
