[project]
name = "test-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "google-genai>=1.20.0",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "langgraph-api>=0.2.3",
    "langgraph-sdk>=0.1.61",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.1.0",
]
